--- a/[Retaliation Gaming]/RG_HTML/html/index.html
+++ b/[Retaliation Gaming]/RG_HTML/html/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="style.css" type="text/css">
 		<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
 		<script src="./listener.js" type="text/javascript"></script>
-		<script src="main.js" type="text/javascript"></script>
+		<script src="../main.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div id="container">
