--- a/[Retaliation Gaming]/RG_HTML/html/index.html
+++ b/[Retaliation Gaming]/RG_HTML/html/index.html
@@ -16,17 +16,17 @@
 					<td class="tg-baqh" colspan="6"><p id="playerJob">playerJob</p><br></td>
 				  </tr>
 				  <tr>
-					<td class="tg-baqh">IMG</td>
+					<td class="tg-baqh"><img src="./img/health.png" height="25px" width="25px"></td>
 					<td class="tg-baqh"><p id="health%">100%</p></td>
 					<td class="tg-baqh" rowspan="2"></td>
-					<td class="tg-baqh">IMG</td>
+					<td class="tg-baqh"><img src="./img/stamina.png" height="25px" width="25px"></td>
 					<td class="tg-baqh"><p id="stamina%">100%</p></td>
 					<td class="tg-0lax" rowspan="2"></td>
 				  </tr>
 				  <tr>
-					<td class="tg-baqh">IMG</td>
+					<td class="tg-baqh"><img src="./img/food.png" height="25px" width="25px"></td>
 					<td class="tg-baqh"><p id="hunger%">100%</p></td>
-					<td class="tg-baqh">IMG</td>
+					<td class="tg-baqh"><img src="./img/water.png" height="25px" width="25px"></td>
 					<td class="tg-baqh"><p id="thirst%">100%</p></td>
 				  </tr>
 				  <tr>
