--- a/[Retaliation Gaming]/RG_HTML/html/index.html
+++ b/[Retaliation Gaming]/RG_HTML/html/index.html
@@ -10,34 +10,34 @@
 		<div id="container">
 				<table class="tg">
 				  <tr>
-					<th class="tg-0agl" colspan="6"><p id="playerName">playerName</p><br></th>
+					<th class="tg-0agl" colspan="6"><p class="playerName">playerName</p><br></th>
 				  </tr>
 				  <tr>
-					<td class="tg-baqh" colspan="6"><p id="playerJob">playerJob</p><br></td>
+					<td class="tg-baqh" colspan="6"><p class="playerJob">playerJob</p><br></td>
 				  </tr>
 				  <tr>
-					<td class="tg-baqh"><img src="./img/health.png" height="25px" width="25px"></td>
-					<td class="tg-baqh"><p id="health%">100%</p></td>
+					<td class="tg-baqh"><img src="./img/health.png" height="40%"></td>
+					<td class="tg-baqh"><p class="health%">100%</p></td>
 					<td class="tg-baqh" rowspan="2"></td>
-					<td class="tg-baqh"><img src="./img/stamina.png" height="25px" width="25px"></td>
-					<td class="tg-baqh"><p id="stamina%">100%</p></td>
+					<td class="tg-baqh"><img src="./img/stamina.png" height="40%"></td>
+					<td class="tg-baqh"><p class="stamina%">100%</p></td>
 					<td class="tg-0lax" rowspan="2"></td>
 				  </tr>
 				  <tr>
-					<td class="tg-baqh"><img src="./img/food.png" height="25px" width="25px"></td>
-					<td class="tg-baqh"><p id="hunger%">100%</p></td>
-					<td class="tg-baqh"><img src="./img/water.png" height="25px" width="25px"></td>
-					<td class="tg-baqh"><p id="thirst%">100%</p></td>
+					<td class="tg-baqh"><img src="./img/food.png" height="40%"></td>
+					<td class="tg-baqh"><p class="hunger%">100%</p></td>
+					<td class="tg-baqh"><img src="./img/water.png" height="40%"></td>
+					<td class="tg-baqh"><p class="thirst%">100%</p></td>
 				  </tr>
 				  <tr>
-					<td class="tg-baqh" colspan="2" rowspan="2"><p id="ammoInMags">ammoInMags</p></td>
+					<td class="tg-baqh" colspan="2" rowspan="2"><p class="ammoInMags">ammoInMags</p></td>
 					<td class="tg-baqh" rowspan="2"></td>
-					<td class="tg-baqh" colspan="2"><p id="amountOfMags">amountOfMags</p></td>
+					<td class="tg-baqh" colspan="2"><p class="amountOfMags">amountOfMags</p></td>
 					<td class="tg-0lax"></td>
 				  </tr>
 				  <tr>
 					<td class="tg-baqh"></td>
-					<td class="tg-baqh" colspan="2"><p id="fireMode">fireMode</p></td>
+					<td class="tg-baqh" colspan="2"><p class="fireMode">fireMode</p></td>
 				  </tr>
 				</table>
 		</div>
