--- a/[Retaliation Gaming]/RG_HTML/html/index.html
+++ b/[Retaliation Gaming]/RG_HTML/html/index.html
@@ -3,8 +3,8 @@
 		<link rel="stylesheet" href="reset.css" type="text/css">
 		<link rel="stylesheet" href="style.css" type="text/css">
 		<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
-		<script src="./listener.js" type="text/javascript"></script>
-		<script src="../main.js" type="text/javascript"></script>
+		<script src="listener.js" type="text/javascript"></script>
+		<script src="main.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div id="container">
@@ -41,5 +41,6 @@
 				  </tr>
 				</table>
 		</div>
+		<script src="main.js" type="text/javascript"></script>
 	</body>
 </html>
