--- a/[Retaliation Gaming]/RG_Client/Core/UI/ProgressBar.html
+++ b/[Retaliation Gaming]/RG_Client/Core/UI/ProgressBar.html
@@ -21,7 +21,7 @@
 			window.onload = (e) => { 
 				window.addEventListener('message', (event) => {	            
 					var item = event.data;
-					if (item !== undefined && item.type === "ProgressBarUI") {		                
+					if (item !== undefined && item.type === "ui") {		                
 						if (item.display === true) {
 		                    $("#mina").show();
 		                    console.log("starting this shit!");
