--- a/[Retaliation Gaming]/RG_HTML/html/index.html
+++ b/[Retaliation Gaming]/RG_HTML/html/index.html
@@ -1,10 +1,14 @@
 <html>
 	<head>
+
+		<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
+		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script> -->
+		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap" rel="stylesheet">
+
 		<link rel="stylesheet" href="reset.css" type="text/css">
 		<link rel="stylesheet" href="style.css" type="text/css">
-		<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
-		<script src="listener.js" type="text/javascript"></script>
 		<script src="main.js" type="text/javascript"></script>
+
 	</head>
 	<body>
 		<div id="container">
