--- a/[Retaliation Gaming]/RG_HTML/html/index.html
+++ b/[Retaliation Gaming]/RG_HTML/html/index.html
@@ -45,6 +45,34 @@
 				  </tr>
 				</table>
 		</div>
+
+		<div id="container2">
+			<table class="tg2">
+				<tr>
+				  <th class="tg-0lax2" colspan="6">
+					  <p><span class="VehName">Vehicle Name</span><span> - </span><span class="VehPlate">Vehicle Plate</span></p>
+				  </th>
+				</tr>
+				<tr>
+				  <td class="tg-baqh"><img src="./img/fuel_icon.png" height="40%"></td>
+				  <td class="tg-j0tj" rowspan="2">PetrolRangeInKM<br></td>
+				  <td class="tg-j0tj" rowspan="4"></td>
+				  <td class="tg-baqh"><img src="./img/range_icon.png" height="40%"></td>
+				  <td class="tg-hmp3" colspan="2" rowspan="2">CarMilageInSession</td>
+				</tr>
+				<tr>
+				</tr>
+				<tr>
+				  <td class="tg-baqh"><img src="./img/fuel_icon.png" height="40%"></td>
+				  <td class="tg-j0tj" rowspan="2">PetrolRange%<br></td>
+				  <td class="tg-baqh"><img src="./img/range_icon.png" height="40%"></td>
+				  <td class="tg-mb3i" colspan="2" rowspan="2">CarMilageFromDatabase<br></td>
+				</tr>
+				<tr>
+				</tr>
+			  </table>
+	</div>
+
 		<script src="main.js" type="text/javascript"></script>
 	</body>
 </html>
